# exabayes

./: .gitignore  .uncrustify.cfg  C++InANutshell.txt  Doxyfile  INSTALL.txt  KNOWN_BUGS  Makefile.am  README.md  README.txt  apple-build.sh  bootstrap.sh  build.sh  configure.ac  runtests.sh  special-src.txt  src-helper.am  src.am
data/rogue-128/: 128.par  aln.examl.binary  aln.pll.binary
data/rogue-52/: 52  52.nex  aln.examl.binary  aln.pll.binary
data/small-dna/: 49  49.bl2.2  49.examl.binary  49.model  49.nexus  49.nexus.ckp  49.nexus.mcmc  49.tree.1.wBL  49.tree.2  RAxML_info.tmp  aln.examl.binary  aln.pll.binary  randomTreeRandomBL.tre  tree_1  tree_2
data/tiny/: aln.examl.binary  aln.phy  aln.pll.binary
examples/: all-options-documented.nex  configFile-all-options.nex  debug.nex  findBin.sh  findMpi.sh  test-for-many-partitions.nex  test.conf  test.nex
examples/aa/: aln.phy  call-parallel.sh  call.sh  config.nex
examples/aa-revmat/: call-parallel.sh  call.sh  config.nex
examples/binary/: call.sh
examples/dna-partitioned/: aln.part  call-parallel.sh  call.sh  config.nex
examples/dna-unpartitioned/: aln.phy  call-parallel.sh  call.sh  config.nex
lib/ncl-2.1.18/: ._AUTHORS  ._BSDLicense.txt  ._ChangeLog  ._Makefile.am  ._README  ._configure.ac  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  nclv2.1.pc
lib/ncl-2.1.18/autom4te.cache/: output.0  requests  traces.0  traces.1
lib/ncl-2.1.18/config/: ._config.guess  ._libtool.m4  ._ltmain.sh  ._ltoptions.m4  ._ltsugar.m4  ._ltversion.m4  ._lt~obsolete.m4
lib/ncl-2.1.18/ncl/: ._nxsassumptionsblock.cpp  ._nxsblock.cpp  ._nxsblock.h  ._nxscharactersblock.cpp  ._nxscharactersblock.h  ._nxscxxdiscretematrix.cpp  ._nxscxxdiscretematrix.h  ._nxsdefs.h  ._nxsdistancesblock.cpp  ._nxsdistancesblock.h  ._nxsexception.cpp  ._nxsmultiformat.cpp  ._nxspublicblocks.cpp  ._nxsreader.cpp  ._nxsstring.cpp  ._nxsstring.h  ._nxstaxaassociationblock.cpp  ._nxstaxablock.cpp  ._nxstaxablock.h  ._nxstoken.cpp  ._nxstoken.h  ._nxstreesblock.cpp  ._nxstreesblock.h  ._nxsunalignedblock.cpp  ._nxsunalignedblock.h  Makefile  Makefile.in  libncl.la  nxsassumptionsblock.lo  nxsblock.lo  nxscharactersblock.h  nxscharactersblock.lo  nxscxxdiscretematrix.lo  nxsdatablock.lo  nxsdistancesblock.lo  nxsexception.lo  nxsmultiformat.lo  nxspublicblocks.lo  nxsreader.lo  nxssetreader.lo  (+6 more)
lib/ncl-2.1.18/ncl/.deps/: nxsassumptionsblock.Plo  nxsblock.Plo  nxscharactersblock.Plo  nxscxxdiscretematrix.Plo  nxsdatablock.Plo  nxsdistancesblock.Plo  nxsexception.Plo  nxsmultiformat.Plo  nxspublicblocks.Plo  nxsreader.Plo  nxssetreader.Plo  nxsstring.Plo  nxstaxaassociationblock.Plo  nxstaxablock.Plo  nxstoken.Plo  nxstreesblock.Plo  nxsunalignedblock.Plo
lib/phylogenetic-likelihood-library/: CMakeLists.txt  Doxyfile  Makefile.AVX.gcc  Makefile.PTHREADS.AVX.gcc  Makefile.SSE3.PTHREADS.gcc  Makefile.SSE3.gcc  check_malloc.sh  sim_reorder.cpp
lib/pll/: alignment.c  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  fastDNAparsimony.c  genericParallelization.c  globalVariables.h  hash.c  makenewzGenericSpecial.c  models.c  newviewGenericSpecial.c  optimizeModel.c  parsePartition.c  parsePartition.h  parsimony.c  pll-renamed.h  pllInternal.h  searchAlgo.c  topologies.c  treeIO.c  utils.c
m4/: lx_find_mpi.m4
manual/: devel-man.html  devel-man.org  ex-footer.html  ex-header.html  lib.bib  library.bib  library2.bib  manual.html  manual.org  process.sh
manual/css/: org.css
plots/: process.R  rates.1.2  rates.1.2.3
src/: AbstractEvaluator.hpp  AbstractMove.cpp  AbstractMove.hpp  AbstractParameter.hpp  AbstractProposal.cpp  AbstractProposal.hpp  AdHocIntegrator.cpp  AdHocIntegrator.hpp  AminoModelJump.cpp  AminoModelJump.hpp  Arithmetics.cpp  Arithmetics.hpp  ArrayRestorer.cpp  ArrayRestorer.hpp  AvgSplitFreqAssessor.cpp  AvgSplitFreqAssessor.hpp  BandWidthTest.cpp  BandWidthTest.hpp  BareTopology.cpp  BareTopology.hpp  BareTopologyIterator.cpp  BareTopologyIterator.hpp  Bipartition.cpp  Bipartition.hpp  BipartitionExtractor.cpp  BipartitionExtractor.hpp  BipartitionHash.cpp  BipartitionHash.hpp  BipartitionHashNew.cpp  BipartitionHashNew.hpp  BipartitionPrinter.hpp  BitMask.cpp  Block.cpp  Block.hpp  BlockParams.cpp  BlockParams.hpp  BlockPrior.cpp  BlockPrior.hpp  BlockProposalConfig.cpp  BlockProposalConfig.hpp  (+333 more)
src/apps/: README.txt  asdsf.cpp  consense.cpp  credibleSet.cpp  exabayes.cpp  extractBips.cpp  parser.cpp  postProcParam.cpp  sdsf.cpp
src/branches/: AdHocIntegrator.cpp  AdHocIntegrator.hpp  BranchBackup.cpp  BranchBackup.hpp  BranchLengthOptimizer.cpp  BranchLengthOptimizer.hpp  BranchSetProposer.cpp  BranchSetProposer.hpp  ComplexTuner.cpp  ComplexTuner.hpp  DistributionProposer.hpp  GammaProposer.cpp  GammaProposer.hpp  IntegrationModuleImpl.hpp  OptimizedParameter.cpp  OptimizedParameter.hpp  README.txt  TreeIntegrator.cpp  TreeIntegrator.hpp  TreeTraverser.cpp  TreeTraverser.hpp  TreeTraverser.tpp  WeibullProposer.cpp  WeibullProposer.hpp
src/comm/: AbstractPendingSwap.hpp  CommCommon.hpp  CommCore.hpp  CommCoreNew.hpp  CommFlag.hpp  CommRequest.cpp  CommRequest.hpp  Communicator.cpp  Communicator.hpp  Communicator.tpp  ConsumableMessage.hpp  README.txt  (+30 more)
tests/: BareTopologyTest.hpp  BipartitionParserTest.hpp  BipartitionTest.cpp  LikeArrayManagerTest.hpp  LocalCommTest.cpp  MessageQueueTest.cpp  NewickParserTest.hpp  PartitionAssignmentTest.cpp  Test.cpp  TopLevelInvocation.cpp  TopologyTest.hpp  TreeAlnTest.cpp  bitvector_test.hpp  brentTest.cpp  exadebug.cpp  exatest.cpp
utils/: addProposal.pl  automatedBuild.sh  build-distro.sh  checkBounds.R  clangTest.sh  colGrep.sh  compileTest.sh  composePage.sh  concat-trees.sh  createMDSPlot.sh  createMDSPlotHelper.R  defaultRun.sh  distributionPlotter.R  extractAllCredSets.py  findInCode.sh  getMapTree.sh  getTopologies.sh  monitorTemperature.sh  plot.R  plotExa.R  plotParamDistribution.sh  setupPLLLinks.sh  smoketests.sh  switchMpi.sh  updateDate.sh  updateWebpage.sh
webpage/: ex-footer.html  ex-header.html
(+675 files in other folders)
